prover-ray/zkcdriver/testdata/synced/invalid/fixed_array_01.zkc
//error:3:17-18:arrays are restricted to non zero constant value
fn main() {
  var items:[u8;0]
  return
}